# rust-mpd

./: Cargo.toml  README.md
examples/: example.rs
src/: client.rs  convert.rs  idle.rs  message.rs  proto.rs  search.rs  song.rs  sticker.rs  version.rs
tests/helpers/: daemon.rs
