[package]
authors = ["esrh"]
description = "fork of rust-mpd with extra features used in the inori client"
homepage = "https://github.com/eshrh/rust-mpd"
license = "Unlicense"
name = "inori-mpd"
repository = "https://github.com/eshrh/rust-mpd.git"
version = "0.1.0"
edition = "2018"

[dependencies]
bufstream = { version = "0.1", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_repr = { version = "0.1", optional = true }
itertools = "0.13.0"

[dev-dependencies]
tempfile = "3.8.1"

[features]
serde = ["dep:serde", "dep:serde_repr"]
